...
    }
    
    private func setupTableView() {
        tableView.dataSource = self
        tableView.delegate = self
        tableView.register(AlbumCell.self, forCellReuseIdentifier: cellId)
        tableView.accessibilityIdentifier = "TopAlbumsTableView"
        tableView.separatorStyle = .none
        tableView.tableFooterView = UIView()
        tableView.backgroundView = spinnerViewController.view
    }
    
    /// Calls the network client to fetch the albums.
...
