...
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }
            
    lazy var visitAlbumButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Visit Album", for: .normal)
        button.backgroundColor = .buttonBackground
        button.tintColor = .buttonTitle
        button.titleLabel?.font = .button
        button.layer.cornerRadius = .buttonRadius
        button.layer.masksToBounds = true
        button.addTarget(delegate, action: #selector(delegate?.handleVisitAlbum), for: .touchUpInside)
...
